examples/test/testpolicy3470.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3470
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key2: value38
      key34: value16
      key33: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value5
          key32: value41
          key28: value35
      podSelector:
        matchLabels:
          key26: value4
          key7: value8
          key3: value34
